# Agent_Store

./: .gitignore  AGENTS.md  README.md  USER_GUIDE.zh-CN.md  program-manifest.yaml  pyproject.toml
.ai-sdlc/profiles/: decisions.yml  tech-stack.yml
.ai-sdlc/state/: checkpoint.yml  resume-pack.yaml
.github/rulesets/: main-compatibility-gate.json
.github/scripts/: verify_repository.py
.github/workflows/: compatibility-gate.yml  pr-checks.yml  release-build.yml
app/agent_store/: __init__.py
docs/: agent-store-roadmap-phase-archive.zh-CN.md  cross-project-contract-appendix.md  framework-defect-backlog.zh-CN.md  github-governance.md  pull-request-checklist.zh.md  框架自迭代开发与发布约定.md
docs/releases/: v0.7.9.md
frontend/: index.html  package-lock.json  package.json  server.mjs
frontend/api/: recommendation-states.json
frontend/scripts/: verify-frontend.mjs
frontend/src/: app.js  mock-data.js  sdlc-enterprise-vue2.js  styles.css
packaging/offline/: README.md
scripts/: build_agent_store_bundle.py
specs/001-agent-store-phase1-trusted-min-loop/: data-model.md  development-summary.md  plan.md  research.md  spec.md  task-execution-log.md  tasks.md  traceability.md
specs/002-agent-store-catalog-workbench/: development-summary.md  plan.md  spec.md  task-execution-log.md  tasks.md
specs/003-agent-installation-workflow-preview/: development-summary.md  plan.md  release-gate-evidence.md  spec.md  task-execution-log.md  tasks.md
specs/004-installation-request-audit-queue/: development-summary.md  plan.md  spec.md  task-execution-log.md  (+1 more)
tests/: __init__.py
(+470 files in other folders)
