[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-store"
version = "0.1.0"
description = "Agent Store phase 1 trusted minimum loop"
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
]

[tool.setuptools]
package-dir = {"" = "app"}

[tool.setuptools.packages.find]
where = ["app"]

[tool.pytest.ini_options]
pythonpath = ["app"]
testpaths = ["tests"]
